--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BBS Notes - AI-Powered Note Taking Revolution</title>
+    <title>BBS Notes - Smart Notes Platform</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
         * {
@@ -14,321 +14,206 @@
         }
 
         body {
-            background: linear-gradient(135deg, #13111C 0%, #1A1528 100%);
+            background: #0a0a0f;
             color: #fff;
             min-height: 100vh;
             overflow-x: hidden;
         }
 
-        .background-animation {
+        .gradient-bg {
             position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
+            top: -50%;
+            left: -50%;
+            width: 200%;
+            height: 200%;
+            background: radial-gradient(circle at center, #2a1163 0%, transparent 50%);
             z-index: -1;
-            opacity: 0.4;
+            animation: rotateGradient 20s linear infinite;
         }
 
-        .background-animation span {
-            position: absolute;
-            width: 4px;
-            height: 4px;
-            background: #8B5CF6;
-            border-radius: 50%;
-            box-shadow: 0 0 10px #8B5CF6, 0 0 20px #8B5CF6, 0 0 40px #8B5CF6;
-            animation: move 15s linear infinite;
+        @keyframes rotateGradient {
+            0% { transform: rotate(0deg); }
+            100% { transform: rotate(360deg); }
         }
 
-        @keyframes move {
-            0% {
-                transform: translateY(100vh) scale(0);
-            }
-            100% {
-                transform: translateY(-100vh) scale(1);
-            }
-        }
-
-        .glass-effect {
-            background: rgba(255, 255, 255, 0.05);
-            backdrop-filter: blur(10px);
-            border: 1px solid rgba(255, 255, 255, 0.1);
-            border-radius: 16px;
+        .container {
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 0 20px;
         }
 
         nav {
-            padding: 1.5rem 2rem;
+            padding: 20px 0;
             display: flex;
             justify-content: space-between;
             align-items: center;
-            position: sticky;
-            top: 0;
-            z-index: 100;
-            background: rgba(19, 17, 28, 0.8);
             backdrop-filter: blur(10px);
+            background: rgba(255, 255, 255, 0.03);
+            margin: 20px;
+            border-radius: 15px;
+            padding: 15px 30px;
         }
 
-        .logo {
+        .nav-links {
             display: flex;
-            align-items: center;
-            gap: 0.5rem;
-            font-size: 1.5rem;
-            font-weight: bold;
+            gap: 30px;
+        }
+
+        .nav-links a {
             color: #fff;
+            text-decoration: none;
+            opacity: 0.8;
+            transition: all 0.3s;
+            font-size: 14px;
         }
 
-        .logo i {
-            color: #8B5CF6;
-        }
-
-        .nav-buttons {
-            display: flex;
-            gap: 1rem;
-        }
-
-        .btn {
-            padding: 0.75rem 1.5rem;
-            border-radius: 8px;
-            border: none;
-            cursor: pointer;
-            transition: all 0.3s ease;
-            display: flex;
-            align-items: center;
-            gap: 0.5rem;
-        }
-
-        .btn-primary {
-            background: #8B5CF6;
-            color: white;
-        }
-
-        .btn-outline {
-            background: transparent;
-            border: 1px solid #8B5CF6;
-            color: white;
-        }
-
-        .btn:hover {
-            transform: translateY(-2px);
-            box-shadow: 0 0 20px rgba(139, 92, 246, 0.3);
+        .nav-links a:hover {
+            opacity: 1;
+            color: #a855f7;
         }
 
         .hero {
-            display: grid;
-            grid-template-columns: 1fr 1fr;
-            padding: 4rem 2rem;
-            gap: 2rem;
-            max-width: 1200px;
-            margin: 0 auto;
-        }
-
-        .hero-content {
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            gap: 1.5rem;
-        }
-
-        .hero-title {
-            font-size: 3.5rem;
-            line-height: 1.2;
-            background: linear-gradient(90deg, #fff, #8B5CF6);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-            animation: titleGlow 2s ease-in-out infinite alternate;
-        }
-
-        @keyframes titleGlow {
-            from {
-                text-shadow: 0 0 20px rgba(139, 92, 246, 0.5);
-            }
-            to {
-                text-shadow: 0 0 30px rgba(139, 92, 246, 0.8);
-            }
-        }
-
-        .hero-subtitle {
-            font-size: 1.2rem;
-            color: #9CA3AF;
-        }
-
-        .features {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            gap: 1.5rem;
-            padding: 1rem;
-            margin-top: 2rem;
-        }
-
-        .feature-card {
-            padding: 1.5rem;
-            transition: all 0.3s ease;
-            display: flex;
-            flex-direction: column;
-            gap: 1rem;
-            align-items: center;
+            padding: 100px 0;
             text-align: center;
         }
 
-        .feature-card i {
-            font-size: 2rem;
-            color: #8B5CF6;
-            margin-bottom: 1rem;
+        .hero h1 {
+            font-size: 48px;
+            margin-bottom: 20px;
+            background: linear-gradient(135deg, #a855f7, #6366f1);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            animation: fadeIn 1s ease-out;
         }
 
-        .feature-card:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 0 30px rgba(139, 92, 246, 0.2);
+        .hero p {
+            font-size: 18px;
+            opacity: 0.8;
+            margin-bottom: 40px;
+            animation: fadeIn 1s ease-out 0.2s backwards;
         }
 
-        .preview-container {
-            position: relative;
-        }
-
-        .video-preview {
-            width: 100%;
-            border-radius: 12px;
-            box-shadow: 0 0 40px rgba(139, 92, 246, 0.2);
-            cursor: pointer;
-            transition: all 0.3s ease;
-        }
-
-        .video-preview:hover {
-            transform: scale(1.02);
-        }
-
-        .floating-badges {
-            position: absolute;
-            top: -20px;
-            right: -20px;
+        .auth-buttons {
             display: flex;
-            gap: 1rem;
+            gap: 20px;
+            justify-content: center;
+            margin-top: 40px;
         }
 
-        .badge {
-            padding: 0.5rem 1rem;
-            border-radius: 20px;
-            background: rgba(139, 92, 246, 0.2);
-            backdrop-filter: blur(5px);
-            font-size: 0.8rem;
+        .auth-button {
+            padding: 12px 24px;
+            border-radius: 8px;
+            border: none;
+            cursor: pointer;
+            font-weight: 500;
+            transition: all 0.3s;
             display: flex;
             align-items: center;
-            gap: 0.5rem;
+            gap: 10px;
         }
 
-        @media (max-width: 768px) {
-            .hero {
-                grid-template-columns: 1fr;
-                text-align: center;
-            }
+        .google-auth {
+            background: white;
+            color: #333;
+        }
 
-            .hero-title {
-                font-size: 2.5rem;
-            }
+        .email-auth {
+            background: linear-gradient(135deg, #a855f7, #6366f1);
+            color: white;
+        }
 
-            .features {
-                grid-template-columns: 1fr;
-            }
+        .auth-button:hover {
+            transform: translateY(-2px);
+            box-shadow: 0 5px 15px rgba(168, 85, 247, 0.2);
+        }
 
-            .floating-badges {
-                position: static;
-                justify-content: center;
-                margin-top: 1rem;
+        .glass-card {
+            background: rgba(255, 255, 255, 0.03);
+            backdrop-filter: blur(10px);
+            border-radius: 15px;
+            padding: 30px;
+            margin: 20px;
+            animation: fadeIn 1s ease-out;
+        }
+
+        @keyframes fadeIn {
+            from {
+                opacity: 0;
+                transform: translateY(20px);
             }
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+
+        .features-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            gap: 20px;
+            margin-top: 60px;
+        }
+
+        .feature-icon {
+            font-size: 24px;
+            color: #a855f7;
+            margin-bottom: 15px;
         }
     </style>
 </head>
 <body>
-    <div class="background-animation" id="backgroundAnimation"></div>
-    
-    <nav>
-        <div class="logo">
-            <i class="fas fa-book-open"></i>
-            BBS Notes
-        </div>
-        <div class="nav-buttons">
-            <button class="btn btn-outline"><i class="fas fa-sign-in-alt"></i> Login</button>
-            <button class="btn btn-primary"><i class="fas fa-user-plus"></i> Sign Up</button>
-        </div>
-    </nav>
+    <div class="gradient-bg"></div>
 
-    <main>
-        <section class="hero">
-            <div class="hero-content">
-                <h1 class="hero-title">Transform Your Notes with AI Power</h1>
-                <p class="hero-subtitle">Experience the future of note-taking with BBS Notes. Voice-to-text, smart organization, and seamless sharing - all in one beautiful app.</p>
-                <div class="hero-buttons">
-                    <button class="btn btn-primary">
-                        <i class="fas fa-rocket"></i>
-                        Start Your Journey Free
-                    </button>
-                </div>
-                <div class="features">
-                    <div class="feature-card glass-effect">
-                        <i class="fas fa-microphone-alt"></i>
-                        <h3>Voice to Text</h3>
-                        <p>Speak naturally, watch your words transform into perfectly formatted notes</p>
-                    </div>
-                    <div class="feature-card glass-effect">
-                        <i class="fas fa-brain"></i>
-                        <h3>AI Organization</h3>
-                        <p>Smart categorization and tagging powered by advanced AI</p>
-                    </div>
-                    <div class="feature-card glass-effect">
-                        <i class="fas fa-share-alt"></i>
-                        <h3>Easy Sharing</h3>
-                        <p>Collaborate with team members in real-time</p>
-                    </div>
-                </div>
+    <div class="container">
+        <nav>
+            <div class="logo">BBS Notes</div>
+            <div class="nav-links">
+                <a href="#features">Features</a>
+                <a href="#docs">Documentation</a>
+                <a href="#pricing">Pricing</a>
+                <a href="#contact">Contact</a>
             </div>
-            <div class="preview-container">
-                <div class="floating-badges">
-                    <span class="badge"><i class="fas fa-bolt"></i> Lightning Fast</span>
-                    <span class="badge"><i class="fas fa-shield-alt"></i> Secure</span>
-                </div>
-                <video class="video-preview" poster="https://placehold.co/600x400/1A1528/8B5CF6" controls>
-                    <source src="video.mp4" type="video/mp4">
-                    Your browser does not support the video tag.
-                </video>
+        </nav>
+
+        <section class="hero">
+            <h1>Smart Note-Taking Platform</h1>
+            <p>Transform your ideas into organized digital notes with powerful features</p>
+
+            <div class="auth-buttons">
+                <button class="auth-button google-auth">
+                    <i class="fab fa-google"></i>
+                    Sign in with Google
+                </button>
+                <button class="auth-button email-auth">
+                    <i class="far fa-envelope"></i>
+                    Sign up with Email
+                </button>
             </div>
         </section>
-    </main>
 
-    <script>
-        // Create animated background
-        const backgroundAnimation = document.getElementById('backgroundAnimation');
-        for (let i = 0; i < 50; i++) {
-            const span = document.createElement('span');
-            span.style.left = Math.random() * 100 + '%';
-            span.style.animationDelay = Math.random() * 15 + 's';
-            backgroundAnimation.appendChild(span);
-        }
-
-        // Add smooth scroll behavior
-        document.querySelectorAll('a[href^="#"]').forEach(anchor => {
-            anchor.addEventListener('click', function (e) {
-                e.preventDefault();
-                document.querySelector(this.getAttribute('href')).scrollIntoView({
-                    behavior: 'smooth'
-                });
-            });
-        });
-
-        // Add animation to feature cards on scroll
-        const observer = new IntersectionObserver((entries) => {
-            entries.forEach(entry => {
-                if (entry.isIntersecting) {
-                    entry.target.style.opacity = 1;
-                    entry.target.style.transform = 'translateY(0)';
-                }
-            });
-        });
-
-        document.querySelectorAll('.feature-card').forEach((card) => {
-            card.style.opacity = 0;
-            card.style.transform = 'translateY(20px)';
-            observer.observe(card);
-        });
-    </script>
+        <div class="features-grid">
+            <div class="glass-card">
+                <div class="feature-icon">
+                    <i class="fas fa-microphone"></i>
+                </div>
+                <h3>Voice Notes</h3>
+                <p>Convert speech to text instantly</p>
+            </div>
+            <div class="glass-card">
+                <div class="feature-icon">
+                    <i class="fas fa-share-alt"></i>
+                </div>
+                <h3>Easy Sharing</h3>
+                <p>Collaborate with your team seamlessly</p>
+            </div>
+            <div class="glass-card">
+                <div class="feature-icon">
+                    <i class="fas fa-folder-tree"></i>
+                </div>
+                <h3>Smart Organization</h3>
+                <p>AI-powered note categorization</p>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
