--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BBS Notes - Smart Notes Platform</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <title>BBS Notes - AI-Powered Note Taking</title>
     <style>
         * {
             margin: 0;
@@ -14,206 +13,193 @@
         }
 
         body {
-            background: #0a0a0f;
+            background: linear-gradient(135deg, #13111C 0%, #1A1528 100%);
             color: #fff;
             min-height: 100vh;
-            overflow-x: hidden;
-        }
-
-        .gradient-bg {
-            position: fixed;
-            top: -50%;
-            left: -50%;
-            width: 200%;
-            height: 200%;
-            background: radial-gradient(circle at center, #2a1163 0%, transparent 50%);
-            z-index: -1;
-            animation: rotateGradient 20s linear infinite;
-        }
-
-        @keyframes rotateGradient {
-            0% { transform: rotate(0deg); }
-            100% { transform: rotate(360deg); }
-        }
-
-        .container {
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 0 20px;
         }
 
         nav {
-            padding: 20px 0;
+            padding: 1.5rem 2rem;
             display: flex;
             justify-content: space-between;
             align-items: center;
-            backdrop-filter: blur(10px);
-            background: rgba(255, 255, 255, 0.03);
-            margin: 20px;
-            border-radius: 15px;
-            padding: 15px 30px;
         }
 
-        .nav-links {
-            display: flex;
-            gap: 30px;
-        }
-
-        .nav-links a {
+        .logo {
+            font-size: 1.5rem;
+            font-weight: bold;
             color: #fff;
-            text-decoration: none;
-            opacity: 0.8;
-            transition: all 0.3s;
-            font-size: 14px;
         }
 
-        .nav-links a:hover {
-            opacity: 1;
-            color: #a855f7;
-        }
-
-        .hero {
-            padding: 100px 0;
-            text-align: center;
-        }
-
-        .hero h1 {
-            font-size: 48px;
-            margin-bottom: 20px;
-            background: linear-gradient(135deg, #a855f7, #6366f1);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-            animation: fadeIn 1s ease-out;
-        }
-
-        .hero p {
-            font-size: 18px;
-            opacity: 0.8;
-            margin-bottom: 40px;
-            animation: fadeIn 1s ease-out 0.2s backwards;
-        }
-
-        .auth-buttons {
+        .nav-buttons {
             display: flex;
-            gap: 20px;
-            justify-content: center;
-            margin-top: 40px;
+            gap: 1rem;
         }
 
-        .auth-button {
-            padding: 12px 24px;
+        .btn {
+            padding: 0.75rem 1.5rem;
             border-radius: 8px;
             border: none;
             cursor: pointer;
-            font-weight: 500;
-            transition: all 0.3s;
-            display: flex;
-            align-items: center;
-            gap: 10px;
+            transition: all 0.3s ease;
         }
 
-        .google-auth {
-            background: white;
-            color: #333;
-        }
-
-        .email-auth {
-            background: linear-gradient(135deg, #a855f7, #6366f1);
+        .btn-primary {
+            background: #8B5CF6;
             color: white;
         }
 
-        .auth-button:hover {
+        .btn-outline {
+            background: transparent;
+            border: 1px solid #8B5CF6;
+            color: white;
+        }
+
+        .btn:hover {
             transform: translateY(-2px);
-            box-shadow: 0 5px 15px rgba(168, 85, 247, 0.2);
+            box-shadow: 0 0 20px rgba(139, 92, 246, 0.3);
         }
 
-        .glass-card {
-            background: rgba(255, 255, 255, 0.03);
-            backdrop-filter: blur(10px);
-            border-radius: 15px;
-            padding: 30px;
-            margin: 20px;
-            animation: fadeIn 1s ease-out;
-        }
-
-        @keyframes fadeIn {
-            from {
-                opacity: 0;
-                transform: translateY(20px);
-            }
-            to {
-                opacity: 1;
-                transform: translateY(0);
-            }
-        }
-
-        .features-grid {
+        .hero {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-            gap: 20px;
-            margin-top: 60px;
+            grid-template-columns: 1fr 1fr;
+            padding: 4rem 2rem;
+            gap: 2rem;
+            max-width: 1200px;
+            margin: 0 auto;
         }
 
-        .feature-icon {
-            font-size: 24px;
-            color: #a855f7;
-            margin-bottom: 15px;
+        .hero-content {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            gap: 1.5rem;
+        }
+
+        .hero-title {
+            font-size: 3.5rem;
+            line-height: 1.2;
+            background: linear-gradient(90deg, #fff, #8B5CF6);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+        }
+
+        .hero-subtitle {
+            font-size: 1.2rem;
+            color: #9CA3AF;
+        }
+
+        .features {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            gap: 1.5rem;
+            padding: 1rem;
+            margin-top: 2rem;
+        }
+
+        .feature-card {
+            background: rgba(255, 255, 255, 0.05);
+            padding: 1.5rem;
+            border-radius: 12px;
+            backdrop-filter: blur(10px);
+            transition: all 0.3s ease;
+        }
+
+        .feature-card:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 0 30px rgba(139, 92, 246, 0.2);
+        }
+
+        .preview-container {
+            position: relative;
+        }
+
+        .preview-image {
+            width: 100%;
+            border-radius: 12px;
+            box-shadow: 0 0 40px rgba(139, 92, 246, 0.2);
+        }
+
+        @media (max-width: 768px) {
+            .hero {
+                grid-template-columns: 1fr;
+                text-align: center;
+            }
+
+            .hero-title {
+                font-size: 2.5rem;
+            }
+
+            .features {
+                grid-template-columns: 1fr;
+            }
         }
     </style>
 </head>
 <body>
-    <div class="gradient-bg"></div>
+    <nav>
+        <div class="logo">BBS Notes</div>
+        <div class="nav-buttons">
+            <button class="btn btn-outline">Login</button>
+            <button class="btn btn-primary">Sign Up</button>
+        </div>
+    </nav>
 
-    <div class="container">
-        <nav>
-            <div class="logo">BBS Notes</div>
-            <div class="nav-links">
-                <a href="#features">Features</a>
-                <a href="#docs">Documentation</a>
-                <a href="#pricing">Pricing</a>
-                <a href="#contact">Contact</a>
-            </div>
-        </nav>
-
+    <main>
         <section class="hero">
-            <h1>Smart Note-Taking Platform</h1>
-            <p>Transform your ideas into organized digital notes with powerful features</p>
-
-            <div class="auth-buttons">
-                <button class="auth-button google-auth">
-                    <i class="fab fa-google"></i>
-                    Sign in with Google
-                </button>
-                <button class="auth-button email-auth">
-                    <i class="far fa-envelope"></i>
-                    Sign up with Email
-                </button>
+            <div class="hero-content">
+                <h1 class="hero-title">Start your dream site with AI.</h1>
+                <p class="hero-subtitle">Zero code, maximum speed. Transform your notes with AI-powered features.</p>
+                <div class="hero-buttons">
+                    <button class="btn btn-primary">Get Started Free</button>
+                </div>
+                <div class="features">
+                    <div class="feature-card">
+                        <h3>Voice to Text</h3>
+                        <p>Convert speech to text instantly</p>
+                    </div>
+                    <div class="feature-card">
+                        <h3>Easy Sharing</h3>
+                        <p>Share notes with one click</p>
+                    </div>
+                    <div class="feature-card">
+                        <h3>AI Organization</h3>
+                        <p>Auto-organize your thoughts</p>
+                    </div>
+                </div>
+            </div>
+            <div class="preview-container">
+                <img src="https://placehold.co/600x400/1A1528/8B5CF6" alt="App Preview" class="preview-image">
             </div>
         </section>
+    </main>
 
-        <div class="features-grid">
-            <div class="glass-card">
-                <div class="feature-icon">
-                    <i class="fas fa-microphone"></i>
-                </div>
-                <h3>Voice Notes</h3>
-                <p>Convert speech to text instantly</p>
-            </div>
-            <div class="glass-card">
-                <div class="feature-icon">
-                    <i class="fas fa-share-alt"></i>
-                </div>
-                <h3>Easy Sharing</h3>
-                <p>Collaborate with your team seamlessly</p>
-            </div>
-            <div class="glass-card">
-                <div class="feature-icon">
-                    <i class="fas fa-folder-tree"></i>
-                </div>
-                <h3>Smart Organization</h3>
-                <p>AI-powered note categorization</p>
-            </div>
-        </div>
-    </div>
+    <script>
+        // Add smooth scroll behavior
+        document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+            anchor.addEventListener('click', function (e) {
+                e.preventDefault();
+                document.querySelector(this.getAttribute('href')).scrollIntoView({
+                    behavior: 'smooth'
+                });
+            });
+        });
+
+        // Add animation to feature cards on scroll
+        const observer = new IntersectionObserver((entries) => {
+            entries.forEach(entry => {
+                if (entry.isIntersecting) {
+                    entry.target.style.opacity = 1;
+                    entry.target.style.transform = 'translateY(0)';
+                }
+            });
+        });
+
+        document.querySelectorAll('.feature-card').forEach((card) => {
+            card.style.opacity = 0;
+            card.style.transform = 'translateY(20px)';
+            observer.observe(card);
+        });
+    </script>
 </body>
 </html>
