--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BBS Notes - Modern Note Taking</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <title>BBS Notes - Your AI-Powered Note Taking Assistant</title>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
     <style>
         * {
             margin: 0;
@@ -14,16 +14,28 @@
         }
 
         body {
-            background: linear-gradient(135deg, #13111C 0%, #1A1528 100%);
-            color: #fff;
+            background: linear-gradient(120deg, #e0f7fa, #b2ebf2, #e1bee7);
             min-height: 100vh;
         }
 
+        .glass-effect {
+            background: rgba(255, 255, 255, 0.1);
+            backdrop-filter: blur(10px);
+            border-radius: 20px;
+            border: 1px solid rgba(255, 255, 255, 0.2);
+        }
+
         nav {
-            padding: 1.5rem 2rem;
+            padding: 1rem 10%;
             display: flex;
             justify-content: space-between;
             align-items: center;
+            position: fixed;
+            width: 100%;
+            top: 0;
+            z-index: 1000;
+            background: rgba(255, 255, 255, 0.1);
+            backdrop-filter: blur(10px);
         }
 
         .logo {
@@ -31,163 +43,103 @@
             align-items: center;
             gap: 0.5rem;
             font-size: 1.5rem;
-            color: #fff;
+            font-weight: bold;
+            color: #1a237e;
         }
 
-        .logo i {
-            color: #8B5CF6;
-        }
-
-        .nav-buttons {
+        .nav-links {
             display: flex;
-            gap: 1rem;
-        }
-
-        .btn {
-            padding: 0.75rem 1.5rem;
-            border-radius: 8px;
-            border: none;
-            cursor: pointer;
-            transition: all 0.3s ease;
-            display: flex;
-            align-items: center;
-            gap: 0.5rem;
-        }
-
-        .btn-primary {
-            background: #8B5CF6;
-            color: white;
-        }
-
-        .hero {
-            text-align: left;
-            padding: 4rem 2rem;
-            max-width: 1200px;
-            margin: 0 auto;
-            display: grid;
-            grid-template-columns: 1fr 1fr;
             gap: 2rem;
         }
 
-        .hero-content {
+        .nav-links a {
+            text-decoration: none;
+            color: #1a237e;
+            font-weight: 500;
+        }
+
+        .try-free-btn {
+            background: #4285f4;
+            color: white;
+            padding: 0.5rem 1rem;
+            border-radius: 20px;
+            text-decoration: none;
+            transition: transform 0.3s ease;
+        }
+
+        .try-free-btn:hover {
+            transform: scale(1.05);
+        }
+
+        .hero {
+            padding: 8rem 10% 4rem;
+        }
+
+        .hero h1 {
+            font-size: 4rem;
+            color: #1a237e;
+            margin-bottom: 1rem;
+            animation: fadeIn 1s ease;
+        }
+
+        .hero p {
+            font-size: 1.2rem;
+            color: #333;
+            margin-bottom: 2rem;
             max-width: 600px;
         }
 
-        .hero-title {
-            font-size: 3.5rem;
-            margin-bottom: 1.5rem;
-            background: linear-gradient(90deg, #fff, #8B5CF6);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
+        .features {
+            padding: 2rem 10%;
+            display: grid;
+            grid-template-columns: repeat(3, 1fr);
+            gap: 2rem;
         }
 
-        .feature-section {
-            padding: 4rem 2rem;
-            position: relative;
+        .feature-card {
+            padding: 2rem;
+            text-align: center;
+            transition: transform 0.3s ease;
         }
 
-        .jarvis-container {
-            position: relative;
-            max-width: 1200px;
-            margin: 0 auto;
-            min-height: 600px;
+        .feature-card:hover {
+            transform: translateY(-10px);
         }
 
-        .feature-cube {
-            width: 200px;
-            height: 200px;
-            position: absolute;
-            left: 50%;
-            top: 50%;
-            transform: translate(-50%, -50%);
-            transform-style: preserve-3d;
-            animation: rotate 20s infinite linear;
-            cursor: pointer;
+        .rating-card {
+            position: fixed;
+            right: 10%;
+            bottom: 10%;
+            padding: 2rem;
+            text-align: center;
         }
 
-        .cube-face {
-            position: absolute;
-            width: 200px;
-            height: 200px;
-            background: rgba(139, 92, 246, 0.1);
-            backdrop-filter: blur(10px);
-            border: 1px solid rgba(139, 92, 246, 0.3);
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            flex-direction: column;
-            gap: 1rem;
-            transition: all 0.3s ease;
+        .rating {
+            font-size: 3rem;
+            color: #1a237e;
+            margin-bottom: 0.5rem;
         }
 
-        .cube-face:hover {
-            background: rgba(139, 92, 246, 0.2);
+        @keyframes fadeIn {
+            from { opacity: 0; transform: translateY(20px); }
+            to { opacity: 1; transform: translateY(0); }
         }
 
-        .cube-face i {
-            font-size: 2rem;
-            color: #8B5CF6;
-        }
-
-        .feature-details {
-            position: absolute;
-            width: 300px;
-            padding: 1.5rem;
-            background: rgba(139, 92, 246, 0.1);
-            backdrop-filter: blur(10px);
-            border: 1px solid rgba(139, 92, 246, 0.3);
-            border-radius: 12px;
-            opacity: 0;
-            transition: all 0.3s ease;
-            pointer-events: none;
-        }
-
-        .feature-details.active {
-            opacity: 1;
-            pointer-events: all;
-        }
-
-        .jarvis-line {
-            position: absolute;
-            background: linear-gradient(90deg, transparent, #8B5CF6);
-            height: 1px;
-            opacity: 0;
-            transition: all 0.3s ease;
-        }
-
-        .jarvis-line.active {
-            opacity: 1;
-        }
-
-        @keyframes rotate {
-            from { transform: translate(-50%, -50%) rotateX(0) rotateY(0); }
-            to { transform: translate(-50%, -50%) rotateX(360deg) rotateY(360deg); }
-        }
-
-        .badges {
-            position: absolute;
-            top: 2rem;
-            right: 2rem;
-            display: flex;
-            gap: 1rem;
-        }
-
-        .badge {
-            padding: 0.5rem 1rem;
-            border-radius: 20px;
-            background: rgba(139, 92, 246, 0.2);
-            backdrop-filter: blur(5px);
-            display: flex;
+        .get-app-btn {
+            background: #4285f4;
+            color: white;
+            padding: 1rem 2rem;
+            border-radius: 30px;
+            text-decoration: none;
+            display: inline-flex;
             align-items: center;
             gap: 0.5rem;
+            font-weight: bold;
+            transition: transform 0.3s ease;
         }
 
-        .video-container {
-            width: 100%;
-            aspect-ratio: 16/9;
-            background: rgba(139, 92, 246, 0.1);
-            border-radius: 12px;
-            overflow: hidden;
+        .get-app-btn:hover {
+            transform: scale(1.05);
         }
     </style>
 </head>
@@ -197,91 +149,43 @@
             <i class="fas fa-book-open"></i>
             BBS Notes
         </div>
-        <div class="nav-buttons">
-            <button class="btn btn-primary">Login</button>
-            <button class="btn btn-primary">Sign Up</button>
+        <div class="nav-links">
+            <a href="#how-it-works">How it works</a>
+            <a href="#community">Our community</a>
+            <a href="#about">About us</a>
+            <a href="#reviews">Client reviews</a>
         </div>
+        <a href="#" class="try-free-btn">Try for Free →</a>
     </nav>
 
-    <div class="badges">
-        <div class="badge">
-            <i class="fas fa-bolt"></i>
-            Lightning Fast
-        </div>
-        <div class="badge">
-            <i class="fas fa-shield-alt"></i>
-            Secure
-        </div>
-    </div>
-
     <section class="hero">
-        <div class="hero-content">
-            <h1 class="hero-title">Transform Your Notes</h1>
-            <p>Experience the future of note-taking with BBS Notes. Voice-to-text, smart organization, and seamless sharing - all in one beautiful app.</p>
-            <button class="btn btn-primary">Start Your Journey Free</button>
+        <h1>Your personalized<br>AI for note-taking</h1>
+        <p>Transform your thoughts into organized notes with voice-to-text, smart organization, and AI-powered insights.</p>
+        <a href="#" class="get-app-btn">
+            <i class="fas fa-download"></i>
+            Get the App
+        </a>
+    </section>
+
+    <section class="features">
+        <div class="feature-card glass-effect">
+            <h3>Voice to Text</h3>
+            <p>Effortlessly convert your spoken words into perfectly formatted notes.</p>
         </div>
-        <div class="video-container">
-            <img src="https://placehold.co/600x400/1A1528/8B5CF6" alt="BBS Notes Demo">
+        <div class="feature-card glass-effect">
+            <h3>Smart Organization</h3>
+            <p>AI-powered categorization and tagging for easy retrieval.</p>
+        </div>
+        <div class="feature-card glass-effect">
+            <h3>Seamless Sync</h3>
+            <p>Access your notes anywhere, anytime, across all your devices.</p>
         </div>
     </section>
 
-    <section class="feature-section">
-        <div class="jarvis-container" id="jarvisContainer">
-            <!-- Features will be added dynamically -->
-        </div>
-    </section>
-
-    <script>
-        const features = [
-            {
-                icon: 'fas fa-microphone-alt',
-                title: 'Voice Notes',
-                description: 'Transform your spoken words into perfectly formatted text notes instantly. Support for multiple languages and accents.',
-                position: { top: '20%', left: '20%' }
-            },
-            {
-                icon: 'fas fa-share-alt',
-                title: 'Easy Sharing',
-                description: 'Share notes with anyone, anywhere. Real-time collaboration and instant sync across all devices.',
-                position: { top: '20%', right: '20%' }
-            },
-            {
-                icon: 'fas fa-folder-tree',
-                title: 'Smart Organization',
-                description: 'Automatically categorize and tag your notes. Find anything in seconds with powerful search.',
-                position: { bottom: '20%', left: '20%' }
-            },
-            {
-                icon: 'fas fa-lock',
-                title: 'Secure Storage',
-                description: 'End-to-end encryption keeps your notes private and secure. Your data belongs to you.',
-                position: { bottom: '20%', right: '20%' }
-            }
-        ];
-
-        const container = document.getElementById('jarvisContainer');
-
-        features.forEach(feature => {
-            const details = document.createElement('div');
-            details.className = 'feature-details';
-            details.innerHTML = `
-                <h3>${feature.title}</h3>
-                <p>${feature.description}</p>
-            `;
-            Object.assign(details.style, feature.position);
-
-            const line = document.createElement('div');
-            line.className = 'jarvis-line';
-
-            container.appendChild(details);
-            container.appendChild(line);
-
-            // Add click event to show/hide details
-            setTimeout(() => {
-                details.classList.add('active');
-                line.classList.add('active');
-            }, Math.random() * 1000);
-        });
-    </script>
+    <div class="rating-card glass-effect">
+        <div class="rating">4.8 ⭐</div>
+        <p>Top-rated app</p>
+        <small>Explore our customer reviews on App Store</small>
+    </div>
 </body>
 </html>
